Solved footer not responsive

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,3 @@ main{
     margin-top: 5vh;
     text-align: center;
 }
-
-.mfooter{
-    position: fixed;
-    text-align: center;
-    bottom: 0;
-    background: rgba(32, 31, 31, 0.658);
-    color: whitesmoke;
-    font-weight: lighter;
-    width: 100%;
-}
